docs: v0.5 教学指南 - 将 Prisma 替换为 Supabase Client
- 移除 Prisma ORM，改为使用 Supabase Client 直接操作数据库
- 更新数据库配置文档：安装 @supabase/supabase-js
- 更新 Schema 设计文档：改为在 Supabase Dashboard 中创建表
- 更新所有使用 Prisma 的文档（认证、供应商配置、流式对话API）
- 更新 v0.5规划.md 反映技术变更
- 添加 Supabase Client 配置案例文档

原因：Prisma 7.x 在 pnpm workspace 环境下有严重的模块解析问题，
改用 Supabase Client 更简单直接，适合教学项目。

--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-{"name":"ai-chat-platform","private":true,"version":"1.0.0","scripts":{"dev":"turbo dev","build":"turbo build","clean":"turbo clean && rm -rf node_modules","client":"pnpm --filter @ai-chat/client","admin":"pnpm --filter @ai-chat/admin","server":"pnpm --filter @ai-chat/server"},"devDependencies":{"turbo":"^2.0.0"},"packageManager":"pnpm@10.28.2"}
+{
+  "name": "ai-chat-platform",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "clean": "turbo clean && rm -rf node_modules",
+    "client": "pnpm --filter @ai-chat/client",
+    "admin": "pnpm --filter @ai-chat/admin",
+    "server": "pnpm --filter @ai-chat/server dev"
+  },
+  "devDependencies": {
+    "turbo": "^2.0.0"
+  },
+  "packageManager": "pnpm@10.28.2"
+}
