--- a/turbo.json
+++ b/turbo.json
@@ -1,1 +1,9 @@
-{"$schema": "https://turbo.build/schema.json", "globalDependencies": ["**/.env.*local"], "pipeline": {"build": {"dependsOn": ["^build"], "outputs": ["dist/**"]}, "dev": {"cache": false, "persistent": true}, "clean": {"cache": false}}}
+{
+  "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["**/.env.*local"],
+  "pipeline": {
+    "build": { "dependsOn": ["^build"], "outputs": ["dist/**"] },
+    "dev": { "cache": false, "persistent": true },
+    "clean": { "cache": false }
+  }
+}
